--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -1,1 +1,3 @@
-<app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet>
+<div class="w-full h-full">
+  <nova-dev-layout></nova-dev-layout>
+</div>
