--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,1 +1,42 @@
-<p>layout works!</p>
+<!-- <div class="flex flex-col h-full bg-purple-600">
+  
+
+  <div class="flex-auto max-w-full flex h-full">
+    <div class="bg-red-100 h-full min-w-64">SIDEMENU</div>
+
+    <div class="w-full">
+      <div class="p-8 bg-green-200 flex flex-col gap-2 w-full">
+        <h1 class="text-4xl font-bold">Offene Beratungen</h1>
+        <div>Breadcrumb here...</div>
+      </div>
+
+      <div class="bg-yellow-400 w-full h-full">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
+</div> -->
+
+<div class="w-full h-full flex flex-col">
+  <div class="flex flex-col w-full h-full">
+    <nova-dev-menu class="w-full"></nova-dev-menu>
+
+    <div class="flex w-full h-full">
+      <nova-dev-sidebar class="w-80"></nova-dev-sidebar>
+
+      <div class="w-full h-full">
+        <div class="px-8 py-5 bg-cyan-50 flex flex-col gap-2 w-full">
+          <h1 class="text-4xl font-bold">Entity</h1>
+
+          <div class="card flex justify-content-center">
+            <p-breadcrumb class="max-w-full" [model]="items" [home]="home" />
+          </div>
+        </div>
+
+        <div class="p-4">
+          <router-outlet></router-outlet>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
