--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -25,7 +25,7 @@
       <nova-dev-sidebar class="w-80"></nova-dev-sidebar>
 
       <div class="w-full h-full">
-        <div class="px-8 py-5 bg-cyan-50 flex flex-col gap-2 w-full">
+        <div class="px-8 py-5 flex flex-col gap-2 w-full bg-yellow-200">
           <h1 class="text-4xl font-bold">Entity</h1>
 
           <div class="card flex justify-content-center">
