--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,7 +2,7 @@
 
 <p-menubar [model]="items">
   <ng-template pTemplate="start">
-    <div class="logo"></div>
+    <div class="logo" style="animation: spin 500s linear infinite;"></div>
   </ng-template>
   <ng-template pTemplate="item" let-item let-root="root">
     <a pRipple class="flex align-items-center p-menuitem-link">
